--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,54 @@
 @media (min-width:600px){
 .top-navbar{
     box-shadow:0 0 50px gray !important;
-}}
+}
+
+#top-action-section{
+    display: flex !important;
+    align-items: center !important;
+}
+
+
+
+}
+ .user-list-item.active .collapsible-header{
+    background-color: rgb(94, 92, 92);
+}
+.user-list-item.active{
+    background-color: rgb(144, 142, 142);} 
+
+.user-list-item.active .user-list-arrow-icon{
+    transform: rotate(180deg);
+}
+table.highlight > tbody > tr:hover {
+    background-color: rgba(40, 137, 193, 0.5);
+  }
+  .container{
+    width: 100%;
+  }
+  .add-user-modal-block {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(0, 0,0,0.5);
+    top:0;
+    left:0;
+    z-index: 999;
+  }
+  .add-user-modal {
+    position: fixed;
+    
+    height: 70vh;
+    background-color:white;
+    bottom:-70vh;
+    border-radius: 10px;
+   left:0px;
+   right:0px;
+    z-index: 1000;}
+
+    .add-user-modal.show  {
+       box-shadow: 0 0 10px blue;
+        bottom:0;}
+       
+      
+  
