--- a/css/util.css
+++ b/css/util.css
@@ -2284,7 +2284,9 @@ filter:drop-shadow(2px 4px 6px block);}
 ///////////////////////////////////////////////////////////
 */
 .rounded_pill{border-radius: 5rem;}
+.rounded_pill-30{border-radius: 30px,30px,0,0 !important;}
 /*[ Display ]
+
 -----------------------------------------------------------
 */
 .dis-none {display: none;}
